some fixes added redmel allure report fixed;