@@ -19,8 +19,7 @@
         <logback.version>1.5.19</logback.version>
         <jackson.version>2.17.2</jackson.version>
 
-        <maven.build.timestamp.format>yyyy-MM-dd</maven.build.timestamp.format>
-        <allure.results.directory>report/${maven.build.timestamp}</allure.results.directory>
+        <allure.results.dir>${project.build.directory}/allure-results</allure.results.dir>
     </properties>
 
     <dependencies>
@@ -87,20 +86,18 @@
                         <suiteXmlFile>testng.xml</suiteXmlFile>
                     </suiteXmlFiles>
                     <systemPropertyVariables>
-                        <allure.results.directory>${allure.results.directory}</allure.results.directory>
+                        <allure.results.directory>${project.build.directory}/allure-results</allure.results.directory>
                     </systemPropertyVariables>
-                    <argLine>
-                        --add-opens java.base/java.lang=ALL-UNNAMED
-                    </argLine>
+                    <testFailureIgnore>true</testFailureIgnore>
                 </configuration>
             </plugin>
 
             <plugin>
                 <groupId>io.qameta.allure</groupId>
                 <artifactId>allure-maven</artifactId>
-                <version>2.11.2</version>
+                <version>2.16.1</version>
                 <configuration>
-                    <resultsDirectory>${allure.results.directory}</resultsDirectory>
+                        <resultsDirectory>${allure.results.dir}</resultsDirectory>
                 </configuration>
             </plugin>
         </plugins>
